name:                asthmatic
version:             0.1.0.0
synopsis:            Machine code thing doer
description:         Please see README.md
homepage:            http://github.com/bastion-re/asthmatic#readme
license:             PublicDomain
license-file:        LICENSE
author:              bsmt
maintainer:          bsmt@bsmt.me
copyright:           >implying
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Asthmatic
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       binary, bits,
                       attoparsec
  default-language:    Haskell2010

test-suite asthmatic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , asthmatic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bastion-re/asthmatic
